force-app/main/default/objects/RE_Depot_Based_Costing__c/RE_Depot_Based_Costing__c.object-meta.xml
<CustomObject>
    <label>AMV Depot Costing</label>
    <nameField>
        <displayFormat>DBC-{000000000}</displayFormat>
        <label>Depot Based Costing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMV Depot Costings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>