force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>RE_Depot_Pricing_Backbone__r.RE_Product_Name__r.Name</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>