force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_BSP__c.field-meta.xml
<CustomField>
    <fullName>RE_BSP__c</fullName>
    <formula>IF(ISBLANK(RE_HCV_Value__c), 0, RE_HCV_Value__c) +
IF(ISBLANK(RE_Bio_Value__c), 0, RE_Bio_Value__c) +
IF(ISBLANK(RE_S_N_H_Cost__c), 0, RE_S_N_H_Cost__c) +
IF(ISBLANK(RE_Spot_Price_Adjustment__c), 0, RE_Spot_Price_Adjustment__c) +
IF(ISBLANK(RE_Sales_Tax__c), 0, RE_Sales_Tax__c) +
IF(ISBLANK(RE_Weighted_Avg__c), 0, RE_Weighted_Avg__c)</formula>
    <label>BSP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>