force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Comments__c.field-meta.xml
<CustomField>
    <fullName>RE_Comments__c</fullName>
    <label>Comments</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>