force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>AMV Depot Costings</relationshipLabel>
    <relationshipName>AMV_Depot_Costings</relationshipName>
    <type>Lookup</type>
</CustomField>