force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Depot__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot__c</fullName>
    <formula>RE_Depot_Pricing_Backbone__r.RE_Depot_Name__r.Name</formula>
    <label>Depot</label>
    <type>Text</type>
</CustomField>