force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Depot_Pricing_Backbone__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot_Pricing_Backbone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot Pricing Backbone</label>
    <referenceTo>RE_Depot_Pricing_Backbone__c</referenceTo>
    <relationshipName>Depot_Based_Costings</relationshipName>
    <type>Lookup</type>
</CustomField>