force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Final_PSP__c.field-meta.xml
<CustomField>
    <fullName>RE_Final_PSP__c</fullName>
    <label>Final PSP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>