force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_HCV_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_HCV_Value__c</fullName>
    <label>HCV Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>