force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Midday_Pricing_Value__c.field-meta.xml
<CustomField>
    <fullName>RE_Midday_Pricing_Value__c</fullName>
    <label>Midday Pricing Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>