force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_S_N_H_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_S_N_H_Cost__c</fullName>
    <label>S&amp;H Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>