force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>RE_Sales_Tax__c</fullName>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>