force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Spot_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>RE_Spot_Price_Adjustment__c</fullName>
    <label>Spot Price Adjustment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>