force-app/main/default/objects/RE_Depot_Based_Costing__c/fields/RE_Weighted_Avg__c.field-meta.xml
<CustomField>
    <fullName>RE_Weighted_Avg__c</fullName>
    <label>Weighted Avg</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>