force-app/main/default/objects/RE_Depot_Based_Costing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Depot__c</columns>
    <columns>Product__c</columns>
    <columns>RE_Midday_Pricing_Value__c</columns>
    <columns>RE_HCV_Value__c</columns>
    <columns>RE_Bio_Value__c</columns>
    <columns>RE_S_N_H_Cost__c</columns>
    <columns>RE_Sales_Tax__c</columns>
    <columns>RE_Spot_Price_Adjustment__c</columns>
    <columns>RE_Weighted_Avg__c</columns>
    <columns>RE_Job_Run_Count__c</columns>
    <columns>RE_BSP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RE_IsLatest__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>